Usage of List.of(Array)